# Celsius

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  TODO.md  docker-compose.yml  kill.sh  plan.md  pyproject.toml  requirements.txt  run.sh  scope.yml.example
.github/workflows/: ci.yml
celsius/: __init__.py  audit.py  auth.py  cli.py  codescan.py  completeness.py  config.py  correlate.py  cve.py  cveverify.py  defaultcreds.py  engine.py  eol.py  exploitability.py  grade.py  http_analysis.py  logsetup.py  models.py  monitor.py  notify.py  nuclei_scan.py  poc.py  portscan.py  priority.py  reeval.py  remediation.py  report.py  sca.py  scope.py  secrets.py  store.py  svcprobe.py  targets.py  testsites.py  timeutil.py  typosquat.py  version.py  webchecks.py  websecrets.py
celsius/active/: __init__.py  canary.py  harness.py  verifiers.py
celsius/ai/: __init__.py  agent.py  analyze.py  cache.py  hunt.py  prompts.py  provider.py  redact.py  verify_tools.py
celsius/plugins/: __init__.py  base.py  builtin.py
celsius/recon/: apidisco.py  apphint.py  appversion.py  clientsca.py  cohost.py  content_discovery.py  crawler.py  dns.py  dynamic.py  favicon.py  fingerprint.py  jsintel.py  mailsec.py  origin.py  robots.py  sourcemaps.py  subdomains.py  tls.py  topology.py  wayback.py  wpcheck.py
celsius/web/: __init__.py  app.py
celsius/web/static/: app.js  charts.js  dashboard.js  index.html  jobs.js  scan.js  style.css  surface.js
docs/superpowers/plans/: 2026-07-22-evolved-celsius-ui.md  2026-07-22-kimi-hunt-planner.md
docs/superpowers/specs/: 2026-07-22-evolved-celsius-ui-design.md  2026-07-22-kimi-hunt-planner-design.md
scripts/: ui_smoke.py
secscan/: __init__.py  audit.py  auth.py  cli.py  codescan.py  completeness.py  config.py  correlate.py  cve.py  engine.py  eol.py  exploitability.py  http_analysis.py  logsetup.py  models.py  nuclei_scan.py  portscan.py  report.py  sca.py  secrets.py  store.py  version.py  webchecks.py  websecrets.py
secscan/active/: harness.py  verifiers.py
secscan/ai/: __init__.py  analyze.py  cache.py  prompts.py
secscan/plugins/: __init__.py  base.py  builtin.py
secscan/recon/: __init__.py  apidisco.py  crawler.py  dns.py  dynamic.py  fingerprint.py  mailsec.py  sourcemaps.py  subdomains.py  tls.py
secscan/web/: __init__.py  app.py
secscan/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_advisor.py  test_agent.py  test_ai_agent.py  test_ai_cve_verify.py  test_ai_hunt.py  test_ai_hunt_plugin.py  test_ai_provider_kimi.py  test_ai_redaction.py  test_ai_weak_cap.py  test_apidisco.py  test_apphint.py  test_appversion.py  test_auth.py  test_auth_session.py  test_canary_ssrf.py  test_cli.py  test_clientsca.py  test_cohost.py  test_cohost_cdn.py  test_content_discovery.py  test_crawler.py  test_crlf.py  test_cve.py  test_cve_poc_grounding.py  test_cve_pocs.py  test_cve_verify_tiers.py  test_defaultcreds.py  test_dns_canary.py  test_dynamic.py  test_exploit_corroboration.py  test_exploitability.py  test_favicon.py  test_fingerprint.py  test_grade.py  test_harness.py  test_http_analysis.py  test_idor.py  test_idor_plugin.py  test_jsintel.py  (+31 more)
