[build-system]
requires = ["uv_build>=0.9,<0.12"]
build-backend = "uv_build"

[project]
name = "celsius"
description = "Local security scanner — web, network & source code. Stdlib-only core."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
# Keep in sync with celsius/__init__.py:__version__ (uv_build needs a static
# version; the source tree runs uninstalled, so __init__ stays authoritative at
# runtime). tests/test_packaging.py guards against drift.
version = "1.1.0"
authors = [{ name = "supamanluva" }]
keywords = ["security", "scanner", "pentest", "recon", "cve", "vulnerability"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Environment :: Console",
]

# Stdlib-only core: no runtime dependencies. Third-party packages live behind
# extras so `uv pip install celsius` (or `pip install celsius`) stays dependency-
# free, matching the README/CI guarantee.
dependencies = []

[project.optional-dependencies]
# Web UI (`celsius serve`). Mirrors requirements.txt.
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
]
# Dynamic SPA rendering for `--dynamic` / the "crawl + JS" option: a headless
# Chromium driven by Playwright, for JavaScript-rendered apps. After installing
# this extra, fetch the browser once with `uv run playwright install chromium`.
dynamic = [
    "playwright>=1.40",
]

[project.scripts]
celsius = "celsius.cli:main"

[project.urls]
Homepage = "https://github.com/supamanluva/celsius"
Repository = "https://github.com/supamanluva/celsius"

[tool.uv.build-backend]
# Flat layout: the package lives at the repo root (celsius/), not under src/.
module-root = ""
module-name = "celsius"
# Ship non-Python assets (celsius/web/static/*) in the wheel.
source-include = ["celsius/web/static/**"]

# --- uv dependency groups (dev tooling; not shipped) ---------------------------
[dependency-groups]
dev = [
    "ruff>=0.5",
    "pytest>=8",
    "pyright>=1.1.390",
]

[tool.ruff]
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
# The suite is also runnable standalone (`python tests/test_x.py`); tests/conftest.py
# restores monkeypatched module state per-test so a single shared pytest session has
# the same isolation the one-process-per-file standalone runs get for free.

[tool.pyright]
include = ["celsius"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
# reportMissingImports stays at its default (error): run pyright with the web +
# dynamic extras installed (see CI) so fastapi/playwright resolve, rather than
# muting the rule globally — a global mute would also hide a typo'd *first-party*
# import. The rest of basic mode is blocking (0 errors, 0 warnings). The AI/harness paths
# that were previously gradual-typing debt are now typed at the LLM-JSON boundary
# (TYPE_CHECKING imports for the harness/config, host/port coercion in the tool
# dispatcher), so reportArgumentType / reportAttributeAccessIssue / reportCallIssue
# run at error level with everything else.
